# jetbot_perception

./: CMakeLists.txt  package.xml
config/: ssd_mobilenet.yaml  usb_cam.yaml
include/jetbot_detection/: object_detection.hpp
launch/: perception_detection.launch
src/: perception_detection.cpp  perception_subscriber.cpp
src/jetbot_detection/: object_detection.cpp
